--- a/scheduler-samples/scheduler-samples-merged/pom.xml
+++ b/scheduler-samples/scheduler-samples-merged/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>cn.ponfee</groupId>
     <artifactId>scheduler-samples</artifactId>
-    <version>${revision}</version>
+    <version>${spvision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
