--- a/scheduler-samples/scheduler-samples-separately/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>cn.ponfee</groupId>
     <artifactId>scheduler-samples</artifactId>
-    <version>${revision}</version>
+    <version>${spvision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -21,10 +21,4 @@
     <module>scheduler-samples-separately-worker-frameless</module>
   </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-samples-common</artifactId>
-    </dependency>
-  </dependencies>
 </project>
