--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-frameless/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>cn.ponfee</groupId>
     <artifactId>scheduler-samples-separately</artifactId>
-    <version>${revision}</version>
+    <version>${spvision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -24,14 +24,24 @@
       <artifactId>commons-pool2</artifactId>
       <version>2.11.1</version>
     </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-samples-common</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
   <build>
 
     <plugins>
       <!-- https://maven.apache.org/plugins/maven-shade-plugin/examples/executable-jar.html -->
-      <!-- error: Cannot find 'resource' in class org.apache.maven.plugins.shade.resource.ManifestResourceTransformer
-           resolve: https://stackoverflow.com/questions/43626806/shade-for-parameter-resource-cannot-find-resource-in-class-org-apache-maven-p
+      <!-- error msg: Cannot find 'resource' in class org.apache.maven.plugins.shade.resource.ManifestResourceTransformer
+           resolve  : https://stackoverflow.com/questions/43626806/shade-for-parameter-resource-cannot-find-resource-in-class-org-apache-maven-p
        -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -69,6 +79,7 @@
                 <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
                   <resource>META-INF/spring.factories</resource>
                 </transformer>
+                <!-- Relocated class names in "META-INF/services" resources and merges them. -->
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
