--- a/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
+++ b/scheduler-samples/scheduler-samples-separately/scheduler-samples-separately-worker-springboot/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>cn.ponfee</groupId>
     <artifactId>scheduler-samples-separately</artifactId>
-    <version>${revision}</version>
+    <version>${spvision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -18,6 +18,10 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-worker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>scheduler-samples-common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
