--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,13 @@
     https://blog.csdn.net/qq_42651904/article/details/121191238
 
     发布命令：
-      1.1）deploy方式：mvn -Drevision=_ versions:set -DgenerateBackupPoms=false -DnewVersion=1.5-SNAPSHOT && mvn clean deploy -DskipTests -Dcheckstyle.skip -U
+      1.1）deploy方式：mvn -Drevision=_ versions:set -DnewVersion=1.6-SNAPSHOT && mvn clean deploy -DskipTests -Dcheckstyle.skip -U
       2.1）release交互模式：
           | ```bash
           | mvn release:update-versions \
           |   -B \
           |   -\-batch-mode \
-          |   -DdevelopmentVersion=1.5-SNAPSHOT \
+          |   -DdevelopmentVersion=1.6-SNAPSHOT \
           | && \
           | mvn release:prepare release:perform \
           |   -Darguments="-Dcheckstyle.skip"
@@ -38,12 +38,12 @@
           | mvn release:update-versions \
           |   -B \
           |   -\-batch-mode \
-          |   -DdevelopmentVersion=1.5-SNAPSHOT \
+          |   -DdevelopmentVersion=1.6-SNAPSHOT \
           | && \
           | mvn release:prepare release:perform \
           |   -Darguments="-Dcheckstyle.skip" \
-          |   -DreleaseVersion=1.5 \
-          |   -Dtag=v1.5 \
+          |   -DreleaseVersion=1.6 \
+          |   -Dtag=v1.6 \
           |   -DdevelopmentVersion=1.6-SNAPSHOT
           | ```
 
@@ -105,7 +105,7 @@
   </modules>
 
   <properties>
-    <revision>1.6-SNAPSHOT</revision>
+    <revision>1.7-SNAPSHOT</revision>
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
@@ -136,6 +136,17 @@
         <version>1.17.6</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+        <version>${springboot.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -365,6 +376,14 @@
     </pluginManagement>
 
     <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.13.0</version>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
