--- a/scheduler-registry/scheduler-registry-redis/pom.xml
+++ b/scheduler-registry/scheduler-registry-redis/pom.xml
@@ -30,6 +30,11 @@
       <version>0.6</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
