--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -29,7 +29,7 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <distributed.scheduler.version>1.5</distributed.scheduler.version>
+    <distributed.scheduler.version>1.6</distributed.scheduler.version>
     <springboot.version>2.7.7</springboot.version>
     <springframework.version>5.3.24</springframework.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
@@ -255,14 +255,11 @@
 
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.13.0</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-          <encoding>${file.encoding}</encoding>
-          <compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
+          <generateBackupPoms>false</generateBackupPoms>
         </configuration>
       </plugin>
       <plugin>
@@ -271,6 +268,17 @@
         <version>3.3.0</version>
         <configuration>
           <encoding>${file.encoding}</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+          <encoding>${file.encoding}</encoding>
+          <compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
