--- a/scheduler-supervisor/pom.xml
+++ b/scheduler-supervisor/pom.xml
@@ -63,6 +63,18 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.214</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.vorburger.mariaDB4j</groupId>
+      <artifactId>mariaDB4j</artifactId>
+      <version>2.5.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>scheduler-dispatch-redis</artifactId>
       <version>${project.parent.version}</version>
