--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     https://blog.csdn.net/qq_42651904/article/details/121191238
 
     发布命令：
-      1.1）deploy方式：mvn -Drevision=_ versions:set -DnewVersion=1.8-SNAPSHOT && mvn clean deploy -DskipTests -Dcheckstyle.skip -U
+      1.1）deploy方式：mvn -Drevision=_ versions:set -DnewVersion=1.8-SNAPSHOT && mvn clean deploy -DskipTests -Dcheckstyle.skip=true -U
       2.1）release交互模式：
           | ```bash
           | mvn release:update-versions \
@@ -31,7 +31,7 @@
           |   -DdevelopmentVersion=1.8-SNAPSHOT \
           | && \
           | mvn release:prepare release:perform \
-          |   -Darguments="-Dcheckstyle.skip"
+          |   -Darguments="-Dcheckstyle.skip=true"
           | ```
       2.2）release非交互式：
           | ```bash
@@ -41,7 +41,7 @@
           |   -DdevelopmentVersion=1.8-SNAPSHOT \
           | && \
           | mvn release:prepare release:perform \
-          |   -Darguments="-Dcheckstyle.skip" \
+          |   -Darguments="-Dcheckstyle.skip=true" \
           |   -DreleaseVersion=1.8 \
           |   -Dtag=v1.8 \
           |   -DdevelopmentVersion=1.8-SNAPSHOT
@@ -116,7 +116,7 @@
     <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
 
     <argLine>-server -Xms256m -Xmx512m -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m</argLine>
-    <springboot.version>2.7.7</springboot.version>
+    <spring-boot.version>2.7.7</spring-boot.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
   </properties>
 
@@ -139,7 +139,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-redis</artifactId>
-        <version>${springboot.version}</version>
+        <version>${spring-boot.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.springframework.boot</groupId>
@@ -187,62 +187,7 @@
   </dependencyManagement>
 
   <dependencies>
-    <dependency>
-      <groupId>jakarta.annotation</groupId>
-      <artifactId>jakarta.annotation-api</artifactId>
-      <version>1.3.5</version>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.validation</groupId>
-      <artifactId>jakarta.validation-api</artifactId>
-      <version>2.0.2</version>
-    </dependency>
-    <!--<dependency>
-      <groupId>org.hibernate.validator</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>6.2.5.Final</version>
-    </dependency>-->
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
-    </dependency>
-    <!-- adapter to slf4j-api -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <!-- <dependency> 当前使用的就是log4j2，需去掉该dependency
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-to-slf4j</artifactId>
-      <version>${log4j2.version}</version>
-    </dependency> -->
-    <!-- commons-logging桥接到Log4j2 -->
-     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jcl</artifactId>
-      <version>${log4j2.version}</version>
-    </dependency>
-    <!-- java.util.logging桥接到Log4j2 -->
-     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jul</artifactId>
-      <version>${log4j2.version}</version>
-    </dependency>
-
-    <!-- 需要注意以下几个processor的定义顺序，否则需要使用annotationProcessorPaths指定 -->
-    <!-- lombok provided -->
+    <!-- Help for compile：需要注意以下几个processor的定义顺序，否则需要使用annotationProcessorPaths指定 -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -250,13 +195,8 @@
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
-    <!-- https://mapstruct.org/documentation/1.5/reference/html/ -->
     <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
-    </dependency>
-    <dependency>
+      <!-- Generate annotated @Mapper interface implementation class -->
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct-processor</artifactId>
       <version>${mapstruct.version}</version>
@@ -266,7 +206,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
-      <version>${springboot.version}</version>
+      <version>${spring-boot.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
@@ -453,7 +393,7 @@
             <path>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-configuration-processor</artifactId>
-              <version>${springboot.version}</version>
+              <version>${spring-boot.version}</version>
             </path>
             <path>
               <groupId>org.springframework</groupId>
