--- a/scheduler-samples/pom.xml
+++ b/scheduler-samples/pom.xml
@@ -29,8 +29,8 @@
     <maven.install.skip>true</maven.install.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
 
-    <distributed.scheduler.version>1.8-SNAPSHOT</distributed.scheduler.version>
-    <springboot.version>2.7.7</springboot.version>
+    <distributed-scheduler.version>1.8-SNAPSHOT</distributed-scheduler.version>
+    <spring-boot.version>2.7.7</spring-boot.version>
     <mapstruct.version>1.5.3.Final</mapstruct.version>
   </properties>
 
@@ -53,58 +53,58 @@
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-common</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-core</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-supervisor</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-worker</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
 
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-registry-redis</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-registry-consul</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-registry-nacos</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-registry-zookeeper</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-registry-etcd</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-dispatch-redis</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
       <dependency>
         <groupId>cn.ponfee</groupId>
         <artifactId>scheduler-dispatch-http</artifactId>
-        <version>${distributed.scheduler.version}</version>
+        <version>${distributed-scheduler.version}</version>
       </dependency>
 
       <dependency>
@@ -116,47 +116,13 @@
   </dependencyManagement>
 
   <dependencies>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-registry-redis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-registry-consul</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-registry-nacos</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-registry-zookeeper</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-registry-etcd</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-dispatch-redis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>scheduler-dispatch-http</artifactId>
-    </dependency>
-
-    <!-- for help compile -->
+    <!-- For help compile -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mapstruct</groupId>
@@ -168,7 +134,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
-      <version>${springboot.version}</version>
+      <version>${spring-boot.version}</version>
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
