--- a/scheduler-test/pom.xml
+++ b/scheduler-test/pom.xml
@@ -60,4 +60,20 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>../db-script</directory>
+        <includes>
+          <include>JOB_TABLES_DDL.sql</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
+  </build>
+
 </project>
