--- a/scheduler-samples/scheduler-samples-common/src/main/resources/application-worker.yml
+++ b/scheduler-samples/scheduler-samples-common/src/main/resources/application-worker.yml
@@ -1,5 +1,7 @@
 # scheduler worker configuration
 distributed.scheduler.worker:
   group: default
+  tick-ms: 100
+  ring-size: 60
   maximum-pool-size: 100
   keep-alive-time-seconds: 300
